Prevent from breaking out of container

--- a/app.css
+++ b/app.css
@@ -2,3 +2,17 @@
 .panel-title {
   font-weight: bold;
 }
+
+code {
+  -ms-word-break: break-all;
+
+       /* Be VERY careful with this, breaks normal words wh_erever */
+       word-break: break-all;
+
+       /* Non standard for webkit */
+       word-break: break-word;
+
+  -webkit-hyphens: auto;
+     -moz-hyphens: auto;
+          hyphens: auto;
+}
